using port 443 for om

--- a/nginx.conf
+++ b/nginx.conf
@@ -113,6 +113,11 @@ http {
 
         server_name om.sp-mini.pro;
 
+        # Load the certificate files.
+        ssl_certificate /opt/ovenmediaengine/bin/conf/fullchain.pem;
+        ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
+        ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
+
         location / {
             proxy_pass https://om_llhls;
         }
