nginx depends on ome

--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,7 @@ services:
       - private
     depends_on:
       - service-gateway
+      - ovenmediaengine
 
 
   # ✅ Angular Frontend Application for Linux
