--- a/nginx.conf
+++ b/nginx.conf
@@ -120,6 +120,12 @@ http {
 
         location / {
             proxy_pass https://om_llhls;
+            proxy_ssl_verify off;         # Disable SSL certificate verification, if needed
+            proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
+            proxy_set_header Host $host;    # Forward the client Host header
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
     ############## om_llhls #############
