--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -27,8 +27,18 @@ http {
         server angular-app-linux:4400;
     }
     server {
-        listen 80;
+        listen 443 ssl default_server reuseport;
+        listen [::]:443 ssl default_server reuseport;
+
         server_name sp-mini.pro;
+
+        # Load the certificate files.
+        ssl_certificate /etc/letsencrypt/live/sp-mini.pro/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/sp-mini.pro/privkey.pem;
+        ssl_trusted_certificate /etc/letsencrypt/live/sp-mini.pro/chain.pem;
+
+        # Load the Diffie-Hellman parameter.
+        ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
 
         location / {
             proxy_pass http://frontend;
