stream directive removed from nginx

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -1,13 +1,13 @@
-stream {
-    upstream rtmp_backend {
-        server ovenmediaengine:1935;
-    }
+# stream {
+#     upstream rtmp_backend {
+#         server ovenmediaengine:1935;
+#     }
 
-    server {
-        listen 1935;
-        proxy_pass rtmp_backend;
-    }
-}
+#     server {
+#         listen 1935;
+#         proxy_pass rtmp_backend;
+#     }
+# }
 http {
 
 
