testing with frontend only

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -1,14 +1,3 @@
-# stream {
-#     upstream rtmp_backend {
-#         server ovenmediaengine:1935;
-#     }
-
-#     server {
-#         listen 1935;
-#         proxy_pass rtmp_backend;
-#     }
-# }
-
 ############## frontend #############
 upstream frontend {
     server angular-app-linux:4400;
@@ -34,36 +23,36 @@ server {
 ############## frontend #############
 
 
-############## api #############
-upstream api {
-    server service-gateway:1437;
-}
+# ############## api #############
+# upstream api {
+#     server service-gateway:1437;
+# }
 
-server {
-    listen 80;
-    server_name api.sp-mini.pro;
+# server {
+#     listen 80;
+#     server_name api.sp-mini.pro;
 
-    location / {
-        proxy_pass http://api;
-    }
-}
-############## api #############
+#     location / {
+#         proxy_pass http://api;
+#     }
+# }
+# ############## api #############
 
 
-############## hls #############
-upstream hls {
-    server llhls-server:59919;
-}
+# ############## hls #############
+# upstream hls {
+#     server llhls-server:59919;
+# }
 
-server {
-    listen 80;
-    server_name hls.sp-mini.pro;
+# server {
+#     listen 80;
+#     server_name hls.sp-mini.pro;
 
-    location / {
-        proxy_pass http://hls;
-    }
-}
-############## hls #############
+#     location / {
+#         proxy_pass http://hls;
+#     }
+# }
+# ############## hls #############
 
 
 ############## rtmp #############
@@ -83,46 +72,46 @@ server {
 
 
 
-############## relay #############
-upstream relay {
-    server relay-server:3001;
-}
+# ############## relay #############
+# upstream relay {
+#     server relay-server:3001;
+# }
 
-server {
-    listen 80;
-    server_name relay.sp-mini.pro;
+# server {
+#     listen 80;
+#     server_name relay.sp-mini.pro;
 
-    location / {
-        proxy_pass http://relay;
-    }
-}
-############## relay #############
+#     location / {
+#         proxy_pass http://relay;
+#     }
+# }
+# ############## relay #############
 
 
-############## om_llhls #############
-upstream om_llhls {
-    server ovenmediaengine:3334;
-}
+# ############## om_llhls #############
+# upstream om_llhls {
+#     server ovenmediaengine:3334;
+# }
 
-server {
-    listen 443 ssl default_server reuseport;
-    listen [::]:443 ssl default_server reuseport;
+# server {
+#     listen 443 ssl default_server reuseport;
+#     listen [::]:443 ssl default_server reuseport;
 
-    server_name om.sp-mini.pro;
+#     server_name om.sp-mini.pro;
 
-    # Load the certificate files.
-    ssl_certificate /opt/ovenmediaengine/bin/conf/fullchain.pem;
-    ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
-    ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
+#     # Load the certificate files.
+#     ssl_certificate /opt/ovenmediaengine/bin/conf/fullchain.pem;
+#     ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
+#     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
-    location / {
-        proxy_pass https://om_llhls;
-        proxy_ssl_verify off;         # Disable SSL certificate verification, if needed
-        proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
-        proxy_set_header Host $host;    # Forward the client Host header
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-############## om_llhls #############
+#     location / {
+#         proxy_pass https://om_llhls;
+#         proxy_ssl_verify off;         # Disable SSL certificate verification, if needed
+#         proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
+#         proxy_set_header Host $host;    # Forward the client Host header
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+# }
+# ############## om_llhls #############
