--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -17,7 +17,7 @@ server {
     ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
 
     location / {
-        proxy_pass http://frontend;
+        proxy_pass https://frontend;
     }
 }
 ############## frontend #############
