--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -23,20 +23,29 @@ server {
 ############## frontend #############
 
 
-# ############## api #############
-# upstream api {
-#     server service-gateway:1437;
-# }
+############## backend #############
+upstream backend {
+    server service-gateway:1437;
+}
+server {
+    listen 443 ssl reuseport;
+    listen [::]:443 ssl reuseport;
 
-# server {
-#     listen 80;
-#     server_name api.sp-mini.pro;
+    server_name api.sp-mini.pro;
 
-#     location / {
-#         proxy_pass http://api;
-#     }
-# }
-# ############## api #############
+    # Load the certificate files.
+    ssl_certificate /etc/letsencrypt/live/api.sp-mini.pro/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.sp-mini.pro/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/api.sp-mini.pro/chain.pem;
+
+    # Load the Diffie-Hellman parameter.
+    ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
+
+    location / {
+        proxy_pass https://backend;
+    }
+}
+############## backend #############
 
 
 # ############## hls #############
@@ -88,30 +97,30 @@ server {
 # ############## relay #############
 
 
-# ############## om_llhls #############
-# upstream om_llhls {
-#     server ovenmediaengine:3334;
-# }
+############## om_llhls #############
+upstream om_llhls {
+    server ovenmediaengine:3334;
+}
 
-# server {
-#     listen 443 ssl default_server reuseport;
-#     listen [::]:443 ssl default_server reuseport;
+server {
+    listen 443 ssl reuseport;
+    listen [::]:443 ssl reuseport;
 
-#     server_name om.sp-mini.pro;
+    server_name om.sp-mini.pro;
 
-#     # Load the certificate files.
-#     ssl_certificate /opt/ovenmediaengine/bin/conf/fullchain.pem;
-#     ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
-#     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
+    # Load the certificate files.
+    ssl_certificate /opt/ovenmediaengine/bin/conf/fullchain.pem;
+    ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
+    ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
-#     location / {
-#         proxy_pass https://om_llhls;
-#         proxy_ssl_verify off;         # Disable SSL certificate verification, if needed
-#         proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
-#         proxy_set_header Host $host;    # Forward the client Host header
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
-# ############## om_llhls #############
+    location / {
+        proxy_pass https://om_llhls;
+        proxy_ssl_verify off;         # Disable SSL certificate verification, if needed
+        proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
+        proxy_set_header Host $host;    # Forward the client Host header
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+############## om_llhls #############
