testing with frontend and backend

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -28,8 +28,8 @@ upstream backend {
     server service-gateway:1437;
 }
 server {
-    listen 443 ssl reuseport;
-    listen [::]:443 ssl reuseport;
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
     server_name api.sp-mini.pro;
 
@@ -103,8 +103,8 @@ upstream om_llhls {
 }
 
 server {
-    listen 443 ssl reuseport;
-    listen [::]:443 ssl reuseport;
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
     server_name om.sp-mini.pro;
 
