testing with frontend and backend

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -17,7 +17,7 @@ server {
     ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
 
     location / {
-        proxy_pass https://frontend;
+        proxy_pass http://frontend;
     }
 }
 ############## frontend #############
@@ -42,7 +42,7 @@ server {
     ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
 
     location / {
-        proxy_pass https://backend;
+        proxy_pass http://backend;
     }
 }
 ############## backend #############
