converted all public domains to tls

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -49,51 +49,53 @@ server {
 
 
 # ############## hls #############
-# upstream hls {
-#     server llhls-server:59919;
-# }
+upstream hls {
+    server llhls-server:59919;
+}
 
-# server {
-#     listen 80;
-#     server_name hls.sp-mini.pro;
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name hls.sp-mini.pro;
 
-#     location / {
-#         proxy_pass http://hls;
-#     }
-# }
+    # Load the certificate files.
+    ssl_certificate /etc/letsencrypt/live/hls.sp-mini.pro/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/hls.sp-mini.pro/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/hls.sp-mini.pro/chain.pem;
+
+    # Load the Diffie-Hellman parameter.
+    ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
+
+    location / {
+        proxy_pass http://hls;
+    }
+}
 # ############## hls #############
-
-
-############## rtmp #############
-# upstream rtmp {
-#     server ovenmediaengine:1935;
-# }
-
-# server {
-#     listen 80;
-#     server_name rtmp.sp-mini.pro;
-
-#     location / {
-#         proxy_pass rtmp://rtmp;
-#     }
-# }
-############## rtmp #############
 
 
 
 # ############## relay #############
-# upstream relay {
-#     server relay-server:3001;
-# }
+upstream relay {
+    server relay-server:3001;
+}
 
-# server {
-#     listen 80;
-#     server_name relay.sp-mini.pro;
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name relay.sp-mini.pro;
 
-#     location / {
-#         proxy_pass http://relay;
-#     }
-# }
+    # Load the certificate files.
+    ssl_certificate /etc/letsencrypt/live/relay.sp-mini.pro/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/relay.sp-mini.pro/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/relay.sp-mini.pro/chain.pem;
+
+    # Load the Diffie-Hellman parameter.
+    ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
+
+    location / {
+        proxy_pass http://relay;
+    }
+}
 # ############## relay #############
 
 
