--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -100,9 +100,9 @@ server {
 
 
 ############## om_llhls #############
-upstream om_llhls {
-    server ovenmediaengine:3334;
-}
+# upstream om_llhls {
+#     server ovenmediaengine:3334;
+# }
 
 server {
     listen 443 ssl;
@@ -124,5 +124,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+    location / {
+        proxy_pass https://ovenmediaengine:3334;
+        proxy_ssl_verify off;         # Disable SSL certificate verification if needed
+        proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
+        proxy_ssl_name om.sp-mini.pro;  # Use the proper SNI value for the backend
+        proxy_set_header Host $host;    # Forward the client Host header
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+}
 }
 ############## om_llhls #############
