removed all headers from ome proxy

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -117,9 +117,9 @@ server {
 
     location / {
         proxy_pass https://ovenmediaengine:3334;
-        proxy_ssl_verify off;         # Disable SSL certificate verification if needed
-        proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
-        proxy_ssl_name om.sp-mini.pro;  # Use the proper SNI value for the backend
+        # proxy_ssl_verify off;         # Disable SSL certificate verification if needed
+        # proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
+        # proxy_ssl_name om.sp-mini.pro;  # Use the proper SNI value for the backend
         proxy_set_header Host $host;    # Forward the client Host header
         # proxy_set_header X-Real-IP $remote_addr;
         # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
