--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -118,7 +118,7 @@ server {
     location / {
         proxy_pass https://ovenmediaengine:3334;
         # proxy_ssl_verify off;         # Disable SSL certificate verification if needed
-        # proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
+        proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
         proxy_ssl_name om.sp-mini.pro;  # Use the proper SNI value for the backend
         # proxy_set_header Host $host;    # Forward the client Host header
         # proxy_set_header X-Real-IP $remote_addr;
