--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -105,8 +105,8 @@ server {
 # }
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
     server_name om.sp-mini.pro;
 
@@ -117,7 +117,10 @@ server {
 
     location / {
         proxy_pass https://ovenmediaengine:3334;
-        # proxy_ssl_verify off;         # Disable SSL certificate verification if needed
+        proxy_buffering off;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        proxy_ssl_verify off;         # Disable SSL certificate verification if needed
         proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
         proxy_ssl_name om.sp-mini.pro;  # Use the proper SNI value for the backend
         proxy_set_header Host $host;    # Forward the client Host header
