--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -116,7 +116,7 @@ server {
     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
     location / {
-        proxy_pass https://ovenmediaengine:3334;
+        proxy_pass https://ovenmediaengine:3334$request_uri;
         proxy_buffering off;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
