--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -126,6 +126,7 @@ server {
         proxy_set_header Host $host;    # Forward the client Host header
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        add_header 'Access-Control-Allow-Origin' '*' always;
         # proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
