--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -116,6 +116,22 @@ server {
     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
     location / {
+        add_header Cache-Control no-cache;
+
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length';
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+        types {
+            application/vnd.apple.mpegurl m3u8;
+            video/mp2t ts;
+        }
+
         proxy_pass https://ovenmediaengine:3334$request_uri;
         proxy_buffering off;
         proxy_http_version 1.1;
@@ -126,7 +142,6 @@ server {
         proxy_set_header Host $host;    # Forward the client Host header
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        add_header 'Access-Control-Allow-Origin' '*' always;
         # proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
