--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -105,8 +105,8 @@ server {
 # }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
     server_name om.sp-mini.pro;
 
@@ -132,7 +132,7 @@ server {
             video/mp2t ts;
         }
 
-        proxy_pass https://ovenmediaengine:3334$request_uri;
+        proxy_pass https://ovenmediaengine:3334;
         proxy_buffering off;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
@@ -142,7 +142,7 @@ server {
         proxy_set_header Host $host;    # Forward the client Host header
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 ############## om_llhls #############
