different set of headers in nginx config

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -99,10 +99,10 @@ server {
 # ############## relay #############
 
 
-############## om_llhls #############
-# upstream om_llhls {
-#     server ovenmediaengine:3334;
-# }
+############# om_llhls #############
+upstream om_llhls {
+    server ovenmediaengine:3334;
+}
 
 server {
     listen 443 ssl;
@@ -116,30 +116,13 @@ server {
     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
     location / {
-        add_header Cache-Control no-cache;
-
-        # add_header 'Access-Control-Allow-Origin' '*' always;
-        # add_header 'Access-Control-Expose-Headers' 'Content-Length';
-        # if ($request_method = 'OPTIONS') {
-        #     add_header 'Access-Control-Allow-Origin' '*';
-        #     add_header 'Access-Control-Max-Age' 1728000;
-        #     add_header 'Content-Type' 'text/plain charset=UTF-8';
-        #     add_header 'Content-Length' 0;
-        #     return 204;
-        # }
-        types {
-            application/vnd.apple.mpegurl m3u8;
-            video/mp2t ts;
-        }
-
-        proxy_pass https://ovenmediaengine:3334;
-        proxy_buffering off;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        proxy_ssl_verify off;         # Disable SSL certificate verification if needed
-        proxy_ssl_server_name on;       # Enable SNI so the correct hostname is sent
-        proxy_ssl_name om.sp-mini.pro;  # Use the proper SNI value for the backend
-        proxy_set_header Host $host;    # Forward the client Host header
+        proxy_pass https://om_llhls;
+        proxy_pass_request_headers on;
+        proxy_ssl_verify off;          # If needed (for testing or specific setups)
+        proxy_ssl_server_name on;        # Sends SNI
+        proxy_ssl_name om.sp-mini.pro;   # Ensures the SNI matches the backend cert
+        
+        proxy_set_header Host $host;     # Forward original Host header
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
