--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -114,18 +114,38 @@ server {
     ssl_certificate /opt/ovenmediaengine/bin/conf/fullchain.pem;
     ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
+
+     # Increase buffer sizes for HLS/DASH streaming
+    proxy_buffers 16 64k;
+    proxy_buffer_size 128k;
+
+    # Proxy settings
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+
+
+    location ~ \.(m3u8|ts|m4s|mpd)$ {
+        add_header Cache-Control no-cache;
+        proxy_pass http://om_llhls;
+    }
     location / {
-        proxy_pass https://om_llhls;
-        proxy_pass_request_headers on;
-        proxy_ssl_verify off;          # If needed (for testing or specific setups)
-        proxy_ssl_server_name on;        # Sends SNI
-        proxy_ssl_name om.sp-mini.pro;   # Ensures the SNI matches the backend cert
+        proxy_pass http://om_llhls;
+        # proxy_pass_request_headers on;
+        # proxy_ssl_verify off;          # If needed (for testing or specific setups)
+        # proxy_ssl_server_name on;        # Sends SNI
+        # proxy_ssl_name om.sp-mini.pro;   # Ensures the SNI matches the backend cert
         
-        proxy_set_header Host $host;     # Forward original Host header
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        # proxy_set_header Host $host;     # Forward original Host header
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 ############## om_llhls #############
