--- a/compose.yml
+++ b/compose.yml
@@ -61,7 +61,7 @@ services:
       PG_PORT: 5432
       OM_URL: http://ovenmediaengine:8081/v1
       OM_HOST_NAME: ${OM_HOST_NAME}
-      OM_CTRL_SVR: service-gateway:1437
+      OM_CTRL_SVR: https://service-gateway:1437
       OM_DUMPS: /app/dumps
     secrets:
       - pg_user
@@ -144,7 +144,7 @@ services:
     environment:
       API_URL: "https://api.example.com"
       CP_SERVER_BASE_URL: "https://${API_HOST_NAME}/api"
-      HLS_URL: "http://${HLS_HOST_NAME}"
+      HLS_URL: "https://${HLS_HOST_NAME}"
       SP_RELAY_URL: "https://${RELAY_HOST_NAME}"
       RTMP_URL: "rtmp://${RTMP_HOST_NAME}"
       PLAYER_URL: "https://${OM_HOST_NAME}"
