changes in compose file

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 HOST_NAME=sp-mini.pro
-OM_HOST_NAME="om.sp-mini.pro","sp-mini.pro"
+OM_HOST_NAME='"om.sp-mini.pro","sp-mini.pro"'
 PLAYER_HOST_NAME=om.sp-mini.pro
 API_HOST_NAME=api.sp-mini.pro
 RTMP_HOST_NAME=rtmp.sp-mini.pro
