--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -103,58 +103,37 @@ server {
 upstream om_llhls {
     server ovenmediaengine:3334;
 }
+
 server {
-    listen *:80;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
     server_name om.sp-mini.pro;
+
+    # Load the certificate files.
+    ssl_certificate /opt/ovenmediaengine/bin/conf/fullchain.pem;
+    ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
+    ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
+
     location / {
-        proxy_pass https://om_llhls;
+        # Forward the request to the upstream backend
+        proxy_pass http://om_llhls/;
+        
+        # Ensure HTTP/1.1 is used (important for persistent connections)
+        proxy_http_version 1.1;
+        
+        # Pass along the original host and client details
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Disable buffering for streaming
+        proxy_buffering off;
+
+        # Optionally, adjust the timeouts for long-lived streaming connections
+        proxy_read_timeout 300;
+        proxy_send_timeout 300;
     }
 }
-# server {
-#     listen 443 ssl;
-#     listen [::]:443 ssl;
-
-#     server_name om.sp-mini.pro;
-
-#     # Load the certificate files.
-#     ssl_certificate /opt/ovenmediaengine/bin/conf/fullchain.pem;
-#     ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
-#     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers HIGH:!aNULL:!MD5;
-
-
-#      # Increase buffer sizes for HLS/DASH streaming
-#     proxy_buffers 16 64k;
-#     proxy_buffer_size 128k;
-
-#     # Proxy settings
-#     proxy_http_version 1.1;
-#     proxy_set_header Host $host;
-#     proxy_set_header X-Real-IP $remote_addr;
-#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#     proxy_set_header X-Forwarded-Proto $scheme;
-
-
-
-#     location ~ \.(m3u8|ts|m4s|mpd)$ {
-#         add_header Cache-Control no-cache;
-#         proxy_pass http://om_llhls;
-#     }
-#     location / {
-#         proxy_pass http://om_llhls;
-#         # proxy_pass_request_headers on;
-#         # proxy_ssl_verify off;          # If needed (for testing or specific setups)
-#         # proxy_ssl_server_name on;        # Sends SNI
-#         # proxy_ssl_name om.sp-mini.pro;   # Ensures the SNI matches the backend cert
-        
-#         # proxy_set_header Host $host;     # Forward original Host header
-#         # proxy_set_header X-Real-IP $remote_addr;
-#         # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         # proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
-############## om_llhls #############
+############# om_llhls #############
