cors handling in nginx conf

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -110,19 +110,26 @@ server {
 
     server_name om.sp-mini.pro;
 
-    # Load the certificate files.
+    # Load your certificate files.
     ssl_certificate /opt/ovenmediaengine/bin/conf/fullchain.pem;
     ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
     location / {
-        # Forward the request to the upstream backend
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+            add_header 'Access-Control-Max-Age' 1728000 always;
+            add_header 'Content-Length' 0;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            return 204;
+        }
+
+        # Pass all other requests to OvenMediaEngine
         proxy_pass http://om_llhls/;
-        
-        # Ensure HTTP/1.1 is used (important for persistent connections)
         proxy_http_version 1.1;
-        
-        # Pass along the original host and client details
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -130,10 +137,11 @@ server {
         
         # Disable buffering for streaming
         proxy_buffering off;
-
-        # Optionally, adjust the timeouts for long-lived streaming connections
         proxy_read_timeout 300;
         proxy_send_timeout 300;
+        
+        # Make sure every response includes the CORS header
+        add_header 'Access-Control-Allow-Origin' '*' always;
     }
 }
 ############# om_llhls #############
