cors handling in nginx conf

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -116,9 +116,10 @@ server {
     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
     location / {
-        # Handle preflight OPTIONS requests
+        # Intercept and respond to OPTIONS requests (preflight)
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Origin' $http_origin always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
             add_header 'Access-Control-Max-Age' 1728000 always;
@@ -127,7 +128,7 @@ server {
             return 204;
         }
 
-        # Pass all other requests to OvenMediaEngine
+        # Proxy all other requests to the OvenMediaEngine endpoint.
         proxy_pass http://om_llhls/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -135,13 +136,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Disable buffering for streaming
+        # Disable buffering for low-latency streaming.
         proxy_buffering off;
         proxy_read_timeout 300;
         proxy_send_timeout 300;
         
-        # Make sure every response includes the CORS header
-        add_header 'Access-Control-Allow-Origin' '*' always;
+        # Add CORS response headers dynamically.
+        add_header 'Access-Control-Allow-Origin' $http_origin always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
     }
 }
 ############# om_llhls #############
