--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -129,7 +129,7 @@ server {
         }
 
         # Proxy all other requests to the OvenMediaEngine endpoint.
-        proxy_pass http://om_llhls/;
+        proxy_pass https://om_llhls/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
