changes to the header of OME nginx conf

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -107,43 +107,50 @@ upstream om_llhls {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-
     server_name om.sp-mini.pro;
 
-    # Load your certificate files.
-    ssl_certificate /opt/ovenmediaengine/bin/conf/fullchain.pem;
-    ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
+    ssl_certificate       /opt/ovenmediaengine/bin/conf/fullchain.pem;
+    ssl_certificate_key   /opt/ovenmediaengine/bin/conf/privkey.pem;
     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
+    # 1) Block stray socket.io calls
+    location /socket.io {
+        return 404;
+    }
+
     location / {
-        # Intercept and respond to OPTIONS requests (preflight)
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' $http_origin always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-            add_header 'Access-Control-Max-Age' 1728000 always;
-            add_header 'Content-Length' 0;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
+        # 2) Handle CORS preflight
+        if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Origin  $http_origin   always;
+            add_header Access-Control-Allow-Credentials 'true'      always;
+            add_header Access-Control-Allow-Methods    'OPTIONS, GET, HEAD' always;
+            add_header Access-Control-Allow-Headers    'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+            add_header Access-Control-Max-Age          1728000        always;
+            add_header Content-Length                  0             always;
+            add_header Content-Type                    'text/plain charset=UTF-8' always;
             return 204;
         }
 
-        # Proxy all other requests to the OvenMediaEngine endpoint.
-        proxy_pass https://om_llhls/;
+        # 3) Proxy to OvenMediaEngine
+        proxy_pass         http://om_llhls/;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Disable buffering for low-latency streaming.
-        proxy_buffering off;
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_buffering    off;
         proxy_read_timeout 300;
         proxy_send_timeout 300;
-        
-        # Add CORS response headers dynamically.
-        add_header 'Access-Control-Allow-Origin' $http_origin always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+        # 4) Strip any upstream CORS headers so we don’t leak a wildcard
+        proxy_hide_header Access-Control-Allow-Origin;
+        proxy_hide_header Access-Control-Allow-Credentials;
+
+        # 5) Add the correct, dynamic CORS headers
+        add_header Access-Control-Allow-Origin  $http_origin   always;
+        add_header Access-Control-Allow-Credentials 'true'      always;
+        add_header Access-Control-Allow-Methods    'OPTIONS, GET, HEAD' always;
+        add_header Access-Control-Allow-Headers    'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
     }
 }
 ############# om_llhls #############
