changes to the header of OME nginx conf

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -101,6 +101,7 @@ server {
 
 ############# om_llhls #############
 upstream om_llhls {
+    # OME is configured with TLS on 3334
     server ovenmediaengine:3334;
 }
 
@@ -113,13 +114,13 @@ server {
     ssl_certificate_key   /opt/ovenmediaengine/bin/conf/privkey.pem;
     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
-    # 1) Block stray socket.io calls
+    # Block any stray socket.io calls
     location /socket.io {
         return 404;
     }
 
     location / {
-        # 2) Handle CORS preflight
+        # CORS preflight
         if ($request_method = OPTIONS) {
             add_header Access-Control-Allow-Origin  $http_origin   always;
             add_header Access-Control-Allow-Credentials 'true'      always;
@@ -131,22 +132,32 @@ server {
             return 204;
         }
 
-        # 3) Proxy to OvenMediaEngine
-        proxy_pass         http://om_llhls/;
+        # Proxy to OME over HTTPS
+        proxy_pass         https://om_llhls/;
         proxy_http_version 1.1;
+
+        # enable SNI
+        proxy_ssl_server_name on;
+
+        # if your OME TLS cert is self-signed or internal CA, you can disable strict verify
+        proxy_ssl_verify       off;
+        # or, to verify:
+        # proxy_ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
+
         proxy_set_header   Host              $host;
         proxy_set_header   X-Real-IP         $remote_addr;
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto $scheme;
+
         proxy_buffering    off;
         proxy_read_timeout 300;
         proxy_send_timeout 300;
 
-        # 4) Strip any upstream CORS headers so we don’t leak a wildcard
+        # Strip any upstream CORS headers
         proxy_hide_header Access-Control-Allow-Origin;
         proxy_hide_header Access-Control-Allow-Credentials;
 
-        # 5) Add the correct, dynamic CORS headers
+        # re‑inject valid CORS
         add_header Access-Control-Allow-Origin  $http_origin   always;
         add_header Access-Control-Allow-Credentials 'true'      always;
         add_header Access-Control-Allow-Methods    'OPTIONS, GET, HEAD' always;
