no cache for ome in nginx

--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -101,7 +101,6 @@ server {
 
 ############# om_llhls #############
 upstream om_llhls {
-    # OME is configured with TLS on 3334
     server ovenmediaengine:3334;
 }
 
@@ -110,11 +109,16 @@ server {
     listen [::]:443 ssl;
     server_name om.sp-mini.pro;
 
-    ssl_certificate       /opt/ovenmediaengine/bin/conf/fullchain.pem;
-    ssl_certificate_key   /opt/ovenmediaengine/bin/conf/privkey.pem;
+    ssl_certificate         /opt/ovenmediaengine/bin/conf/fullchain.pem;
+    ssl_certificate_key     /opt/ovenmediaengine/bin/conf/privkey.pem;
     ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
-    # Block any stray socket.io calls
+    # Optional SSL hardening
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # Block stray socket.io calls
     location /socket.io {
         return 404;
     }
@@ -123,38 +127,41 @@ server {
         # CORS preflight
         if ($request_method = OPTIONS) {
             add_header Access-Control-Allow-Origin  $http_origin   always;
-            add_header Access-Control-Allow-Credentials 'true'      always;
+            add_header Access-Control-Allow-Credentials 'true'    always;
             add_header Access-Control-Allow-Methods    'OPTIONS, GET, HEAD' always;
             add_header Access-Control-Allow-Headers    'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-            add_header Access-Control-Max-Age          1728000        always;
-            add_header Content-Length                  0             always;
-            add_header Content-Type                    'text/plain charset=UTF-8' always;
+            add_header Access-Control-Max-Age          1728000      always;
+            add_header Content-Length                  0           always;
+            add_header Content-Type                    text/plain; charset=UTF-8 always;
             return 204;
         }
 
-        # Proxy to OME over HTTPS
-        proxy_pass         https://om_llhls/;
-        proxy_http_version 1.1;
+        # Always proxy and never cache
+        proxy_cache           off;
+        proxy_buffering       off;
+        proxy_pass            https://om_llhls/;
+        proxy_http_version    1.1;
 
-        # if your OME TLS cert is self-signed or internal CA, you can disable strict verify
-        proxy_ssl_verify       off;
-        # or, to verify:
+        # SNI & TLS
+        proxy_ssl_server_name on;
+        proxy_ssl_name        om.sp-mini.pro;
+        proxy_ssl_verify      off;
         # proxy_ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
-        proxy_set_header   Host              $host;
-        proxy_set_header   X-Real-IP         $remote_addr;
-        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto $scheme;
+        # Preserve client info
+        proxy_set_header Host              $host;
+        proxy_set_header Connection        "";
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_buffering    off;
-        proxy_read_timeout 300;
+        proxy_read_timeout  300;
         proxy_send_timeout 300;
 
-        # Strip any upstream CORS headers
+        # Hide upstream’s CORS, then inject correct headers
         proxy_hide_header Access-Control-Allow-Origin;
         proxy_hide_header Access-Control-Allow-Credentials;
 
-        # re‑inject valid CORS
         add_header Access-Control-Allow-Origin  $http_origin   always;
         add_header Access-Control-Allow-Credentials 'true'      always;
         add_header Access-Control-Allow-Methods    'OPTIONS, GET, HEAD' always;
