--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HOST_NAME=sp-mini.pro
 #OM_HOST_NAME needs to be in double-quotes
-OM_HOST_NAME="om.sp-mini.pro"
+OM_HOST_NAME=om.sp-mini.pro
 PLAYER_HOST_NAME=om.sp-mini.pro
 API_HOST_NAME=api.sp-mini.pro
 RTMP_HOST_NAME=rtmp.sp-mini.pro
