--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -132,7 +132,7 @@ server {
             add_header Access-Control-Allow-Headers    'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
             add_header Access-Control-Max-Age          1728000      always;
             add_header Content-Length                  0           always;
-            add_header Content-Type                    text/plain; charset=UTF-8 always;
+            add_header Content-Type                    'text/plain; charset=UTF-8' always;
             return 204;
         }
 
