--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -102,6 +102,7 @@ server {
 ############# om_llhls #############
 upstream om_llhls {
     server ovenmediaengine:3334;
+    keepalive 16;
 }
 
 server {
@@ -150,7 +151,7 @@ server {
 
         # Preserve client info
         proxy_set_header Host              $host;
-        proxy_set_header Connection        "";
+        proxy_set_header Connection keep-alive;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
