--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -140,14 +140,18 @@ server {
         # Always proxy and never cache
         proxy_cache           off;
         proxy_buffering       off;
+        proxy_max_temp_file_size 0;
         proxy_pass            https://om_llhls/;
         proxy_http_version    1.1;
+        
+        # push parts quickly
+        chunked_transfer_encoding on;
+        tcp_nodelay              on;
 
         # SNI & TLS
         proxy_ssl_server_name on;
         proxy_ssl_name        om.sp-mini.pro;
         proxy_ssl_verify      off;
-        # proxy_ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
 
         # Preserve client info
         proxy_set_header Host              $host;
@@ -156,8 +160,8 @@ server {
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_read_timeout  300;
-        proxy_send_timeout 300;
+        proxy_read_timeout  60;
+        proxy_send_timeout 60;
 
         # Hide upstream’s CORS, then inject correct headers
         proxy_hide_header Access-Control-Allow-Origin;
