--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -106,8 +106,8 @@ upstream om_llhls {
 }
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name om.sp-mini.pro;
 
     ssl_certificate         /opt/ovenmediaengine/bin/conf/fullchain.pem;
@@ -143,7 +143,7 @@ server {
         proxy_max_temp_file_size 0;
         proxy_pass            https://om_llhls/;
         proxy_http_version    1.1;
-        
+
         # push parts quickly
         chunked_transfer_encoding on;
         tcp_nodelay              on;
