--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -107,70 +107,48 @@ upstream om_llhls {
 
 server {
     listen 443 ssl http2;
-    listen [::]:443 ssl http2;
     server_name om.sp-mini.pro;
 
-    ssl_certificate         /opt/ovenmediaengine/bin/conf/fullchain.pem;
-    ssl_certificate_key     /opt/ovenmediaengine/bin/conf/privkey.pem;
-    ssl_trusted_certificate /opt/ovenmediaengine/bin/conf/chain.pem;
+    ssl_certificate     /opt/ovenmediaengine/bin/conf/fullchain.pem;
+    ssl_certificate_key /opt/ovenmediaengine/bin/conf/privkey.pem;
 
-    # Optional SSL hardening
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-
-    # Block stray socket.io calls
+    # Block any stray socket.io calls
     location /socket.io {
         return 404;
     }
 
     location / {
-        # CORS preflight
+        # CORS preflight response
         if ($request_method = OPTIONS) {
             add_header Access-Control-Allow-Origin  $http_origin   always;
-            add_header Access-Control-Allow-Credentials 'true'    always;
+            add_header Access-Control-Allow-Credentials true          always;
             add_header Access-Control-Allow-Methods    'OPTIONS, GET, HEAD' always;
-            add_header Access-Control-Allow-Headers    'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-            add_header Access-Control-Max-Age          1728000      always;
-            add_header Content-Length                  0           always;
-            add_header Content-Type                    'text/plain; charset=UTF-8' always;
+            add_header Access-Control-Allow-Headers    'Content-Type, Range' always;
+            add_header Content-Length                  0               always;
             return 204;
         }
 
-        # Always proxy and never cache
-        proxy_cache           off;
-        proxy_buffering       off;
-        proxy_max_temp_file_size 0;
-        proxy_pass            https://om_llhls/;
-        proxy_http_version    1.1;
+        # Main proxy pass (no caching, no buffering)
+        proxy_pass          https://om_llhls/;
+        proxy_http_version  1.1;
+        proxy_cache         off;
+        proxy_buffering     off;
 
-        # push parts quickly
-        chunked_transfer_encoding on;
-        tcp_nodelay              on;
-
-        # SNI & TLS
+        # SNI so OME sees the right hostname
         proxy_ssl_server_name on;
-        proxy_ssl_name        om.sp-mini.pro;
         proxy_ssl_verify      off;
 
-        # Preserve client info
-        proxy_set_header Host              $host;
-        proxy_set_header Connection keep-alive;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        # Keep the upstream connection open
+        proxy_set_header Host $host;
+        proxy_read_timeout  60s;
 
-        proxy_read_timeout  60;
-        proxy_send_timeout 60;
-
-        # Hide upstream’s CORS, then inject correct headers
+        # Overwrite any upstream CORS, then add ours
         proxy_hide_header Access-Control-Allow-Origin;
         proxy_hide_header Access-Control-Allow-Credentials;
-
-        add_header Access-Control-Allow-Origin  $http_origin   always;
-        add_header Access-Control-Allow-Credentials 'true'      always;
-        add_header Access-Control-Allow-Methods    'OPTIONS, GET, HEAD' always;
-        add_header Access-Control-Allow-Headers    'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        add_header Access-Control-Allow-Origin   $http_origin always;
+        add_header Access-Control-Allow-Credentials true         always;
+        add_header Access-Control-Allow-Methods     'OPTIONS, GET, HEAD' always;
+        add_header Access-Control-Allow-Headers     'Content-Type, Range' always;
     }
 }
 ############# om_llhls #############
