--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -140,6 +140,8 @@ server {
 
         # Keep the upstream connection open
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_read_timeout  60s;
 
         # Overwrite any upstream CORS, then add ours
