--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -51,6 +51,7 @@ server {
 # ############## hls #############
 upstream hls {
     server llhls-server:59919;
+    keepalive 16;
 }
 
 server {
@@ -67,7 +68,35 @@ server {
     ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
 
     location / {
+    # CORS preflight response
+        if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Origin  $http_origin   always;
+            add_header Access-Control-Allow-Credentials true          always;
+            add_header Access-Control-Allow-Methods    'OPTIONS, GET, HEAD' always;
+            add_header Access-Control-Allow-Headers    'Content-Type, Range' always;
+            add_header Content-Length                  0               always;
+            return 204;
+        }
         proxy_pass http://hls;
+
+
+        # SNI so OME sees the right hostname
+        proxy_ssl_server_name on;
+        proxy_ssl_verify      off;
+
+        # Keep the upstream connection open
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_read_timeout  60s;
+
+        # Overwrite any upstream CORS, then add ours
+        proxy_hide_header Access-Control-Allow-Origin;
+        proxy_hide_header Access-Control-Allow-Credentials;
+        add_header Access-Control-Allow-Origin   $http_origin always;
+        add_header Access-Control-Allow-Credentials true         always;
+        add_header Access-Control-Allow-Methods     'OPTIONS, GET, HEAD' always;
+        add_header Access-Control-Allow-Headers     'Content-Type, Range' always;
     }
 }
 # ############## hls #############
@@ -94,6 +123,9 @@ server {
 
     location / {
         proxy_pass http://relay;
+        proxy_http_version  1.1;
+        proxy_cache         off;
+        proxy_buffering     off;
     }
 }
 # ############## relay #############
