--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -49,15 +49,16 @@ server {
 
 
 # ############## hls #############
-upstream hls {
-    server llhls-server:59919;
-    keepalive 16;
-}
+# upstream hls {
+#     server llhls-server:59919;
+#     keepalive 16;
+# }
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    server_name hls.sp-mini.pro;
+  listen 443 ssl http2;
+  server_name hls.sp-mini.pro;
+
+  root /usr/share/nginx/html/hls;
 
     # Load the certificate files.
     ssl_certificate /etc/letsencrypt/live/hls.sp-mini.pro/fullchain.pem;
@@ -68,7 +69,7 @@ server {
     ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
 
     location / {
-    # CORS preflight response
+        # CORS preflight response
         if ($request_method = OPTIONS) {
             add_header Access-Control-Allow-Origin  $http_origin   always;
             add_header Access-Control-Allow-Credentials true          always;
@@ -77,9 +78,13 @@ server {
             add_header Content-Length                  0               always;
             return 204;
         }
-        proxy_pass http://hls;
+        # proxy_pass http://hls;
 
 
+        types {
+            application/vnd.apple.mpegurl m3u8;
+            video/mp2t ts;
+        }
         # SNI so OME sees the right hostname
         proxy_ssl_server_name on;
         proxy_ssl_verify      off;
@@ -97,6 +102,13 @@ server {
         add_header Access-Control-Allow-Credentials true         always;
         add_header Access-Control-Allow-Methods     'OPTIONS, GET, HEAD' always;
         add_header Access-Control-Allow-Headers     'Content-Type, Range' always;
+    }
+    location /hls/ {
+        alias /usr/share/nginx/html/hls/ovenmediaengine/vod_dumps/;
+        types {
+            application/vnd.apple.mpegurl m3u8;
+            video/mp2t ts;
+        }
     }
 }
 # ############## hls #############
