--- a/nginx-sp-mini.conf
+++ b/nginx-sp-mini.conf
@@ -198,3 +198,60 @@ server {
     }
 }
 ############# om_llhls #############
+
+
+# ############## coach #############
+upstream coach {
+    server sp-coach-app:4300;
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name coach.sp-mini.pro;
+
+    # Load the certificate files.
+    ssl_certificate /etc/letsencrypt/live/coach.sp-mini.pro/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/coach.sp-mini.pro/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/coach.sp-mini.pro/chain.pem;
+
+    # Load the Diffie-Hellman parameter.
+    ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
+
+    location / {
+        proxy_pass http://coach;
+        proxy_http_version  1.1;
+        proxy_cache         off;
+        proxy_buffering     off;
+    }
+}
+# ############## coach #############
+
+
+
+# ############## tag #############
+upstream tag {
+    server tagging-app-linux:4600;
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name tag.sp-mini.pro;
+
+    # Load the certificate files.
+    ssl_certificate /etc/letsencrypt/live/tag.sp-mini.pro/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tag.sp-mini.pro/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/tag.sp-mini.pro/chain.pem;
+
+    # Load the Diffie-Hellman parameter.
+    ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
+
+    location / {
+        proxy_pass http://tag;
+        proxy_http_version  1.1;
+        proxy_cache         off;
+        proxy_buffering     off;
+    }
+}
+# ############## tag #############
